// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service Detail Screen should render snapshot 1`] = `
<Fragment>
  <AnimatedServiceList
    headerTitle="services"
    onIconPress={[Function]}
    testID="animatedServiceList"
    title="pleaseConfirm"
    titleTextType="regular"
    titleType="large"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "marginHorizontal": 16,
          "marginVertical": 14,
          "paddingVertical": 24,
        }
      }
    >
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "row",
            "height": 25,
            "justifyContent": "space-between",
            "marginBottom": 18,
            "marginHorizontal": 20,
          }
        }
      >
        <PaginationComponent
          activeSlide={1}
          containerStyle={
            Object {
              "paddingHorizontal": 0,
              "paddingVertical": 0,
            }
          }
          dotsLength={3}
        />
        <Badge
          badgeColor="#FBC02D"
          badgeStyle={
            Object {
              "marginBottom": 4,
            }
          }
          title="common:recommended"
        />
      </View>
      <SnapCarousel
        activeSlide={1}
        carouselData={
          Array [
            Object {
              "description": "Rhoncus lacus nunc.",
              "id": 1,
              "info": "markdown",
              "label": false,
              "name": "FREE_LISTING",
              "number": 1,
              "service_bundle_items": Array [
                Object {
                  "category": "Some Category1",
                  "description": "Some Dummy Description1",
                  "id": 1,
                  "item_label": "Item Label1",
                  "name": "HOMZHUB_LISTING1",
                  "position": 1,
                  "title": "Property Listing on Homzhub1",
                },
                Object {
                  "category": "Some Category2",
                  "description": "Some Dummy Description2",
                  "id": 2,
                  "item_label": "Item Label2",
                  "name": "HOMZHUB_LISTING2",
                  "position": 2,
                  "title": "Property Listing on Homzhub2",
                },
                Object {
                  "category": "Some Category3",
                  "description": "Some Dummy Description3",
                  "id": 3,
                  "item_label": "Item Label3",
                  "name": "ASSISTED_NEGOTIATION1",
                  "position": 3,
                  "title": "Assisted Negotiation1",
                },
                Object {
                  "category": "Some Category4",
                  "description": "Some Dummy Description1",
                  "id": 4,
                  "item_label": "Item Label4",
                  "name": "TENANT_SCREENING1",
                  "position": 4,
                  "title": "Tenant Screening1",
                },
                Object {
                  "category": "Some Category5",
                  "description": "Some Dummy Description1",
                  "id": 5,
                  "item_label": "Item Label5",
                  "name": "TENANT_BACKGROUND_CHECK1",
                  "position": 5,
                  "title": "Tenant Background Check1",
                },
                Object {
                  "category": "Some Category6",
                  "description": "Some Dummy Description1",
                  "id": 6,
                  "item_label": "Item Label6",
                  "name": "DOOR_STEP_AGREEMENT_DELIVERY1",
                  "position": 6,
                  "title": "Door step agreement delivery1",
                },
              ],
              "service_cost": 0,
              "title": "Free Listing",
            },
            Object {
              "description": "Vestibulum eu",
              "id": 2,
              "info": "markdown",
              "label": true,
              "name": "ASSISTED_LISTING",
              "number": 2,
              "service_bundle_items": Array [
                Object {
                  "category": "Some Category1",
                  "description": "Some Dummy Description2",
                  "id": 1,
                  "item_label": "Item Label1",
                  "name": "HOMZHUB_LISTING2",
                  "position": 1,
                  "title": "Property Listing on Homzhub2",
                },
                Object {
                  "category": "Some Category2",
                  "description": "Some Dummy Description2",
                  "id": 2,
                  "item_label": "Item Label2",
                  "name": "SITE VISITS2",
                  "position": 2,
                  "title": "Assisted Site-Visits2",
                },
                Object {
                  "category": "Some Category3",
                  "description": "Some Dummy Description2",
                  "id": 3,
                  "item_label": "Item Label3",
                  "name": "ASSISTED_NEGOTIATION2",
                  "position": 3,
                  "title": "Assisted Negotiation2",
                },
                Object {
                  "category": "Some Category4",
                  "description": "Some Dummy Description2",
                  "id": 4,
                  "item_label": "Item Label4",
                  "name": "TENANT_SCREENING2",
                  "position": 4,
                  "title": "Tenant Screening2",
                },
                Object {
                  "category": "Some Category5",
                  "description": "Some Dummy Description2",
                  "id": 5,
                  "item_label": "Item Label5",
                  "name": "TENANT_BACKGROUND_CHECK2",
                  "position": 5,
                  "title": "Tenant Background Check2",
                },
                Object {
                  "category": "Some Category6",
                  "description": "Some Dummy Description2",
                  "id": 6,
                  "item_label": "Item Label6",
                  "name": "DOOR_STEP_AGREEMENT_DELIVERY2",
                  "position": 6,
                  "title": "Door step agreement delivery2",
                },
              ],
              "service_cost": 3000,
              "title": "Assisted Listing",
            },
            Object {
              "description": "tristique donec aenean faucibus",
              "id": 3,
              "info": "markdown",
              "label": false,
              "name": "BOOSTED_LISTING",
              "number": 3,
              "service_bundle_items": Array [
                Object {
                  "category": "Some Category1",
                  "description": "Some Dummy Description3",
                  "id": 1,
                  "item_label": "Item Label1",
                  "name": "HOMZHUB_LISTING3",
                  "position": 1,
                  "title": "Property Listing on Homzhub3",
                },
                Object {
                  "category": "Some Category2",
                  "description": "Some Dummy Description3",
                  "id": 2,
                  "item_label": "Item Label2",
                  "name": "SITE VISITS3",
                  "position": 2,
                  "title": "Assisted Site-Visits3",
                },
                Object {
                  "category": "Some Category3",
                  "description": "Some Dummy Description3",
                  "id": 3,
                  "item_label": "Item Label3",
                  "name": "ASSISTED_NEGOTIATION3",
                  "position": 3,
                  "title": "Assisted Negotiation3",
                },
                Object {
                  "category": "Some Category4",
                  "description": "Some Dummy Description3",
                  "id": 4,
                  "item_label": "Item Label4",
                  "name": "TENANT_SCREENING3",
                  "position": 4,
                  "title": "Tenant Screening3",
                },
                Object {
                  "category": "Some Category5",
                  "description": "Some Dummy Description3",
                  "id": 5,
                  "item_label": "Item Label5",
                  "name": "TENANT_BACKGROUND_CHECK3",
                  "position": 5,
                  "title": "Tenant Background Check3",
                },
                Object {
                  "category": "Some Category6",
                  "description": "Some Dummy Description3",
                  "id": 6,
                  "item_label": "Item Label6",
                  "name": "DOOR_STEP_AGREEMENT_DELIVERY3",
                  "position": 6,
                  "title": "Door step agreement delivery3",
                },
              ],
              "service_cost": -1,
              "title": "Boosted Listing",
            },
          ]
        }
        carouselItem={[Function]}
        contentStyle={
          Object {
            "paddingLeft": 0,
            "paddingRight": 20,
          }
        }
        currentSlide={[Function]}
        testID="carsl"
      />
    </View>
  </AnimatedServiceList>
  <BottomSheet
    headerTitle=""
    isShadowView={false}
    onCloseSheet={[Function]}
    sheetHeight={500}
    visible={false}
  />
</Fragment>
`;

exports[`Service Detail Screen should render snapshot for continue 1`] = `
<Fragment>
  <AnimatedServiceList
    headerTitle="services"
    onIconPress={[Function]}
    testID="animatedServiceList"
    title="pleaseConfirm"
    titleTextType="regular"
    titleType="large"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "marginHorizontal": 16,
          "marginVertical": 14,
          "paddingVertical": 24,
        }
      }
    >
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "row",
            "height": 25,
            "justifyContent": "space-between",
            "marginBottom": 18,
            "marginHorizontal": 20,
          }
        }
      >
        <PaginationComponent
          activeSlide={1}
          containerStyle={
            Object {
              "paddingHorizontal": 0,
              "paddingVertical": 0,
            }
          }
          dotsLength={3}
        />
        <Badge
          badgeColor="#FBC02D"
          badgeStyle={
            Object {
              "marginBottom": 4,
            }
          }
          title="common:recommended"
        />
      </View>
      <SnapCarousel
        activeSlide={1}
        carouselData={
          Array [
            Object {
              "description": "Rhoncus lacus nunc.",
              "id": 1,
              "info": "markdown",
              "label": false,
              "name": "FREE_LISTING",
              "number": 1,
              "service_bundle_items": Array [
                Object {
                  "category": "Some Category1",
                  "description": "Some Dummy Description1",
                  "id": 1,
                  "item_label": "Item Label1",
                  "name": "HOMZHUB_LISTING1",
                  "position": 1,
                  "title": "Property Listing on Homzhub1",
                },
                Object {
                  "category": "Some Category2",
                  "description": "Some Dummy Description2",
                  "id": 2,
                  "item_label": "Item Label2",
                  "name": "HOMZHUB_LISTING2",
                  "position": 2,
                  "title": "Property Listing on Homzhub2",
                },
                Object {
                  "category": "Some Category3",
                  "description": "Some Dummy Description3",
                  "id": 3,
                  "item_label": "Item Label3",
                  "name": "ASSISTED_NEGOTIATION1",
                  "position": 3,
                  "title": "Assisted Negotiation1",
                },
                Object {
                  "category": "Some Category4",
                  "description": "Some Dummy Description1",
                  "id": 4,
                  "item_label": "Item Label4",
                  "name": "TENANT_SCREENING1",
                  "position": 4,
                  "title": "Tenant Screening1",
                },
                Object {
                  "category": "Some Category5",
                  "description": "Some Dummy Description1",
                  "id": 5,
                  "item_label": "Item Label5",
                  "name": "TENANT_BACKGROUND_CHECK1",
                  "position": 5,
                  "title": "Tenant Background Check1",
                },
                Object {
                  "category": "Some Category6",
                  "description": "Some Dummy Description1",
                  "id": 6,
                  "item_label": "Item Label6",
                  "name": "DOOR_STEP_AGREEMENT_DELIVERY1",
                  "position": 6,
                  "title": "Door step agreement delivery1",
                },
              ],
              "service_cost": 0,
              "title": "Free Listing",
            },
            Object {
              "description": "Vestibulum eu",
              "id": 2,
              "info": "markdown",
              "label": true,
              "name": "ASSISTED_LISTING",
              "number": 2,
              "service_bundle_items": Array [
                Object {
                  "category": "Some Category1",
                  "description": "Some Dummy Description2",
                  "id": 1,
                  "item_label": "Item Label1",
                  "name": "HOMZHUB_LISTING2",
                  "position": 1,
                  "title": "Property Listing on Homzhub2",
                },
                Object {
                  "category": "Some Category2",
                  "description": "Some Dummy Description2",
                  "id": 2,
                  "item_label": "Item Label2",
                  "name": "SITE VISITS2",
                  "position": 2,
                  "title": "Assisted Site-Visits2",
                },
                Object {
                  "category": "Some Category3",
                  "description": "Some Dummy Description2",
                  "id": 3,
                  "item_label": "Item Label3",
                  "name": "ASSISTED_NEGOTIATION2",
                  "position": 3,
                  "title": "Assisted Negotiation2",
                },
                Object {
                  "category": "Some Category4",
                  "description": "Some Dummy Description2",
                  "id": 4,
                  "item_label": "Item Label4",
                  "name": "TENANT_SCREENING2",
                  "position": 4,
                  "title": "Tenant Screening2",
                },
                Object {
                  "category": "Some Category5",
                  "description": "Some Dummy Description2",
                  "id": 5,
                  "item_label": "Item Label5",
                  "name": "TENANT_BACKGROUND_CHECK2",
                  "position": 5,
                  "title": "Tenant Background Check2",
                },
                Object {
                  "category": "Some Category6",
                  "description": "Some Dummy Description2",
                  "id": 6,
                  "item_label": "Item Label6",
                  "name": "DOOR_STEP_AGREEMENT_DELIVERY2",
                  "position": 6,
                  "title": "Door step agreement delivery2",
                },
              ],
              "service_cost": 3000,
              "title": "Assisted Listing",
            },
            Object {
              "description": "tristique donec aenean faucibus",
              "id": 3,
              "info": "markdown",
              "label": false,
              "name": "BOOSTED_LISTING",
              "number": 3,
              "service_bundle_items": Array [
                Object {
                  "category": "Some Category1",
                  "description": "Some Dummy Description3",
                  "id": 1,
                  "item_label": "Item Label1",
                  "name": "HOMZHUB_LISTING3",
                  "position": 1,
                  "title": "Property Listing on Homzhub3",
                },
                Object {
                  "category": "Some Category2",
                  "description": "Some Dummy Description3",
                  "id": 2,
                  "item_label": "Item Label2",
                  "name": "SITE VISITS3",
                  "position": 2,
                  "title": "Assisted Site-Visits3",
                },
                Object {
                  "category": "Some Category3",
                  "description": "Some Dummy Description3",
                  "id": 3,
                  "item_label": "Item Label3",
                  "name": "ASSISTED_NEGOTIATION3",
                  "position": 3,
                  "title": "Assisted Negotiation3",
                },
                Object {
                  "category": "Some Category4",
                  "description": "Some Dummy Description3",
                  "id": 4,
                  "item_label": "Item Label4",
                  "name": "TENANT_SCREENING3",
                  "position": 4,
                  "title": "Tenant Screening3",
                },
                Object {
                  "category": "Some Category5",
                  "description": "Some Dummy Description3",
                  "id": 5,
                  "item_label": "Item Label5",
                  "name": "TENANT_BACKGROUND_CHECK3",
                  "position": 5,
                  "title": "Tenant Background Check3",
                },
                Object {
                  "category": "Some Category6",
                  "description": "Some Dummy Description3",
                  "id": 6,
                  "item_label": "Item Label6",
                  "name": "DOOR_STEP_AGREEMENT_DELIVERY3",
                  "position": 6,
                  "title": "Door step agreement delivery3",
                },
              ],
              "service_cost": -1,
              "title": "Boosted Listing",
            },
          ]
        }
        carouselItem={[Function]}
        contentStyle={
          Object {
            "paddingLeft": 0,
            "paddingRight": 20,
          }
        }
        currentSlide={[Function]}
        testID="carsl"
      />
    </View>
  </AnimatedServiceList>
  <BottomSheet
    headerTitle="moreInformation"
    isShadowView={true}
    onCloseSheet={[Function]}
    sheetHeight={650}
    visible={true}
  >
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <Markdown
        debug={false}
        markdownStyles={
          Object {
            "h2": Object {
              "fontSize": 20,
              "fontWeight": "600",
              "marginVertical": 10,
            },
            "h4": Object {
              "color": "#19324A",
              "fontSize": 24,
              "fontWeight": "300",
            },
            "strong": Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            "text": Object {
              "fontSize": 14,
              "fontWeight": "normal",
            },
          }
        }
        parseInline={false}
        useDefaultStyles={true}
      >
        More Info
      </Markdown>
    </View>
    <View
      style={
        Object {
          "justifyContent": "space-around",
          "marginHorizontal": 24,
          "marginVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#001B36",
              "lineHeight": 33,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
              "textAlign": "center",
            }
          }
          textType="regular"
          type="large"
        >
          thankYouMsg
        </Text>
        <SVGUri
          height={150}
          preserveAspectRatio="xMidYMid meet"
          uri="https://homzhub-bucket.s3.amazonaws.com/Group+1301.svg"
          viewBox="0 0 250 150"
          width={250}
        />
        <Label
          style={
            Object {
              "color": "#667686",
              "marginTop": 20,
            }
          }
          textType="regular"
          type="large"
        >
          clickContinue
        </Label>
      </View>
      <Button
        containerStyle={
          Object {
            "flex": 0,
            "marginTop": 20,
          }
        }
        onPress={[Function]}
        title="common:continue"
        type="primary"
      />
    </View>
  </BottomSheet>
</Fragment>
`;
